fix: fixed sidebar

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -18,22 +18,22 @@
     <div class="offcanvas-body">
         <nav>
             <ul class="list-unstyled ps-0">
-                <li class="my-2">
+                <li class="py-1">
                     <a class="btn btn-offcanvas-link align-items-center rounded" href="index.html" id="home-link">
                         <i class="bi bi-house"></i>Home
                     </a>
                 </li>
-                <li class="my-2">
+                <li class="py-1">
                     <a class="btn btn-offcanvas-link align-items-center rounded" href="calculator.html">
                         <i class="bi bi-calculator"></i>Simple Calculator
                     </a>
                 </li>
-                <li class="my-2">
+                <li class="py-1">
                     <a class="btn btn-offcanvas-link align-items-center rounded" href="cheatsheet.html">
                         <i class="bi bi-book"></i>Cheat Sheet
                     </a>
                 </li>
-                <li class="my-2">
+                <li class="py-1">
                     <button class="btn btn-toggle btn-toggle-light align-items-center rounded collapsed"
                         data-bs-toggle="collapse" data-bs-target="#algebra-collapse" aria-expanded="false">
                         Algebra
@@ -91,7 +91,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="my-2">
+                <li class="py-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#geometry-collapse" aria-expanded="false">
                         Geometry
@@ -113,7 +113,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="my-2">
+                <li class="py-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#trig-collapse" aria-expanded="false">
                         Trigonometry
@@ -139,7 +139,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="my-2">
+                <li class="py-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#physics-collapse" aria-expanded="false">
                         Physics
@@ -155,7 +155,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="my-2">
+                <li class="py-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#biology-collapse" aria-expanded="false">
                         Biology
@@ -171,7 +171,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="my-2">
+                <li class="py-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#chem-collapse" aria-expanded="false">
                         Chemistry
@@ -207,7 +207,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="my-2">
+                <li class="py-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#unit-converter-collapse" aria-expanded="false">
                         Unit Converter
@@ -225,7 +225,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="my-2">
+                <li class="py-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#every-day-collapse" aria-expanded="false">
                         Every Day Life
@@ -254,7 +254,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="my-2">
+                <li class="py-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#links-collapse" aria-expanded="false">
                         Links
@@ -294,7 +294,7 @@
                     </div>
                 </li>
                 <li class="border-top my-3"></li>
-                <li class="my-2">
+                <li class="py-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#support-collapse" aria-expanded="false">
                         🍕 Support MathFlare
