--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -273,6 +273,9 @@
                                     class="link-light rounded"><i class="bi bi-github"></i> GitHub</a></li>
                             <li><a href="mailto:contact@mathflare.xyz" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-envelope-fill"></i> Email</a></li>
+                            <li><a href="https://discord.gg/kcjZKHtmuS" target="_blank" rel="noopener"
+                                    class="link-light rounded"><i class="bi bi-discord"></i> Discord Server</a>
+                            </li>
                             <li><a href="https://twitter.com/mathflare" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-twitter"></i> Twitter</a></li>
                             <li><a href="https://instagram.com/mathflare" target="_blank" rel="noopener"
