--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -56,8 +56,10 @@
                             <li><a href="percent.html" class="link-light rounded"><i class="bi bi-percent"></i>
                                     Percentage
                                     Calculator</a></li>
-                            <li><a href="round.html" class="link-light rounded"><i class="bi bi-arrows-expand"></i>
+                            <li><a href="round.html" class="link-light rounded"><i class="bi bi-arrow-down-up"></i>
                                     Round Numbers</a></li>
+                            <li><a href="fractionsimplification.html" class="link-light rounded"><i class="bi bi-arrows-collapse"></i>
+                                    Fraction Simplification</a></li>
                             <li><a href="fact.html" class="link-light rounded"><i class="bi bi-exclamation-lg"></i>
                                     Factorials</a></li>
                             <li><a href="slope.html" class="link-light rounded"><i class="bi bi-graph-up"></i> Slope
