--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -166,11 +166,14 @@
                     <div class="collapse" id="biology-collapse">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small my-1">
                             <li>
-                                <p class="nav-header rounded user-select-none">Mendel's Law</p>
+                                <p class="nav-header rounded user-select-none">Genetics</p>
                             </li>
                             <li><a href="punnettsquare.html" class="link-light rounded"><i
                                         class="bi bi-gender-ambiguous"></i>
                                     Punnett Square</a></li>
+                            <li><a href="complementarydna.html" class="link-light rounded"><i
+                                        class="bi bi-link-45deg"></i>
+                                    DNA Complement Generator</a></li>
                         </ul>
                     </div>
                 </li>
