--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -174,6 +174,9 @@
                             <li><a href="complementarydna.html" class="link-light rounded"><i
                                         class="bi bi-link-45deg"></i>
                                     DNA Complement Generator</a></li>
+                            <li><a href="complementaryrna.html" class="link-light rounded"><i
+                                        class="bi bi-link-45deg"></i>
+                                    RNA Complement Generator</a></li>
                         </ul>
                     </div>
                 </li>
