prod: changed status page link

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -276,7 +276,7 @@
                             <li><a href="contact.html" class="link-light rounded"><i class="bi bi-telephone-fill"></i>
                                     Contact
                                     Form</a></li>
-                            <li><a href="https://mathflare.instatus.com/" target="_blank" rel="noopener"
+                            <li><a href="https://mathflare.statuspage.io/" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-graph-up"></i> Status Page</a>
                             </li>
                             <li><a href="https://github.com/mathflare" target="_blank" rel="noopener"
@@ -345,10 +345,6 @@
                 </li>
                 <li class="mt-2">
                     <p class="text-break" id="search-result"></p>
-                </li>
-                <li>
-                    <iframe src="https://mathflare.instatus.com/embed-status/dark-sm" width="230" height="61"
-                        frameBorder="0" scrolling="no" style="border: none !important;"></iframe>
                 </li>
                 <li>
                     <p class="text-muted" style="padding: 0.5em;">&copy;2021 MathFlare.xyz - All rights reserved.</p>
