prod: lcm and gcd calc

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -68,6 +68,11 @@
                             <li><a href="pointsdistance.html" class="link-light rounded"><i class="bi bi-rulers"></i>
                                     Distance
                                     Between two Points</a></li>
+                            <li><a href="gcd.html" class="link-light rounded"><i class="bi bi-sort-numeric-up-alt"></i>
+                                    Greatest Common Devisor Calculator</a></li>
+                            <li><a href="lcm.html" class="link-light rounded"><i
+                                        class="bi bi-sort-numeric-down-alt"></i>
+                                    Least Common Multiple Calculator</a></li>
                             <li>
                                 <p class="nav-header rounded user-select-none">Equations</p>
                             </li>
