--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -281,7 +281,9 @@ var {
 #solout,
 #concout,
 #dsubout,
-#comprnaout {
+#comprnaout,
+#gcdout,
+#lcmout {
     font-size: 20px !important;
     line-height: 24px !important;
     padding-left: 3em !important;
