refactor: major refactoring

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -289,7 +289,8 @@ var {
 #dsubout,
 #comprnaout,
 #gcdout,
-#lcmout {
+#lcmout,
+#addfractout {
     font-size: 20px !important;
     line-height: 24px !important;
     padding-left: 3em !important;
