--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -61,9 +61,8 @@
                             <li><a href="fractionreduction.html" class="link-light rounded"><i
                                         class="bi bi-percent"></i>
                                     Fraction Reduction</a></li>
-                            <li><a href="fractionaddition.html" class="link-light rounded"><i
-                                        class="bi bi-plus"></i>
-                                    Fractions Addition</a></li>        
+                            <li><a href="fractionaddition.html" class="link-light rounded"><i class="bi bi-plus"></i>
+                                    Fractions Addition</a></li>
                             <li><a href="fact.html" class="link-light rounded"><i class="bi bi-exclamation-lg"></i>
                                     Factorials</a></li>
                             <li><a href="slope.html" class="link-light rounded"><i class="bi bi-graph-up"></i> Slope
