prod: minor changes

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -64,7 +64,7 @@
                             <li><a href="fractionaddition.html" class="link-light rounded"><i class="bi bi-plus-lg"></i>
                                     Fractions Addition</a></li>
                             <li><a href="likefractions.html" class="link-light rounded"><i class="bi bi-front"></i>
-                                    Unlike Fractions to Like</a></li>
+                                    Unlike to Like Fraction Converter</a></li>
                             <li><a href="fact.html" class="link-light rounded"><i class="bi bi-exclamation-lg"></i>
                                     Factorials</a></li>
                             <li><a href="slope.html" class="link-light rounded"><i class="bi bi-graph-up"></i> Slope
