fix: fixed link in navbar

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -290,7 +290,8 @@ var {
 #comprnaout,
 #gcdout,
 #lcmout,
-#addfractout {
+#addfractout,
+#likefractout {
     font-size: 20px !important;
     line-height: 24px !important;
     padding-left: 3em !important;
