--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -63,7 +63,7 @@
                                     Fraction Reduction</a></li>
                             <li><a href="fractionaddition.html" class="link-light rounded"><i class="bi bi-plus-lg"></i>
                                     Fractions Addition</a></li>
-                            <li><a href="likeToUnlike.html" class="link-light rounded"><i class="bi bi-front"></i>
+                            <li><a href="likefractions.html" class="link-light rounded"><i class="bi bi-front"></i>
                                     Unlike to Like Fraction Converter</a></li>
                             <li><a href="fact.html" class="link-light rounded"><i class="bi bi-exclamation-lg"></i>
                                     Factorials</a></li>
