--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-top navbar-dark bg-dark" style="border-bottom: 1px solid var(--bs-warning)">
     <div class="container-fluid">
-        <button class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#menuSidebar"
-            aria-controls="menuSidebar"><span class="navbar-toggler-icon"></span></button>
+        <button class="btn btn-outline-light" data-bs-toggle="offcanvas" data-bs-target="#menuSidebar"
+            aria-controls="menuSidebar"><i class="bi bi-list"></i> Menu</button>
         <a class="navbar-brand" href="https://www.mathflare.xyz">
             <img src="Assets/icon.png" class="user-select-none mb-1" style="height: 1em;" alt="logo">
             MathFlare.xyz
