prod: added number of pairs calc

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -100,6 +100,8 @@
                                 <p class="nav-header rounded user-select-none">Popular Problems</p>
                             </li>
                             <li><a href="handshake.html" class="link-light rounded">🤝 Handshakes at Party</a></li>
+                            <li><a href="numberpairs.html" class="link-light rounded"><i
+                                class="bi bi-bezier2"></i> Number of Pairs</a></li>
                         </ul>
                     </div>
                 </li>
