prod: added scientific calculator

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -25,7 +25,7 @@
                 </li>
                 <li class="py-1">
                     <a class="btn btn-offcanvas-link align-items-center rounded" href="calculator.html">
-                        <i class="bi bi-calculator"></i>Simple Calculator
+                        <i class="bi bi-calculator"></i>Scientific Calculator
                     </a>
                 </li>
                 <li class="py-1">
@@ -100,8 +100,8 @@
                                 <p class="nav-header rounded user-select-none">Popular Problems</p>
                             </li>
                             <li><a href="handshake.html" class="link-light rounded">🤝 Handshakes at Party</a></li>
-                            <li><a href="numberpairs.html" class="link-light rounded"><i
-                                class="bi bi-bezier2"></i> Number of Pairs</a></li>
+                            <li><a href="numberpairs.html" class="link-light rounded"><i class="bi bi-bezier2"></i>
+                                    Number of Pairs</a></li>
                         </ul>
                     </div>
                 </li>
