prod: added subatomic particles calc

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -201,6 +201,8 @@
                             <li>
                                 <p class="nav-header rounded user-select-none">Basic Chemistry</p>
                             </li>
+                            <li><a href="subatomicparticles.html" class="link-light rounded"><i class="bi bi-bullseye"></i>
+                                Atomic-Mass number to number of Subatomic Particles</a></li>
                             <li><a href="concentration.html" class="link-light rounded"><i class="bi bi-eyedropper"></i>
                                     Solution Concentration</a></li>
                             <li><a href="inorganiccomp.html" class="link-light rounded"><i class="bi bi-water"></i>
@@ -215,7 +217,7 @@
                                         class="bi bi-minecart-loaded"></i>
                                     Incomplete Combustions</a></li>
                             <li>
-                                <p class="nav-header rounded user-select-none">Acids and Bases</p>
+                                <p class="nav-header rounded user-select-none">Chemical Equations</p>
                             </li>
                             <li><a href="neutralization.html" class="link-light rounded"><i class="bi bi-droplet"></i>
                                     Neutralization Reaction Calculator</a></li>
