--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -310,7 +310,9 @@ var {
 #addfractout,
 #likefractout,
 #numpairsout,
-#subparticout {
+#subparticout,
+#atomout,
+#ionout {
     font-size: 20px !important;
     line-height: 24px !important;
     padding-left: 3em !important;
