prod: added protein translation calculator

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -206,6 +206,9 @@
                             <li><a href="complementaryrna.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-link-45deg"></i>
                                     RNA Complement Generator</a></li>
+                            <li><a href="proteintranslation.html" class="link-light rounded text-truncate"><i
+                                        class="bi bi-hexagon"></i>
+                                    Protein Translation</a></li>
                         </ul>
                     </div>
                 </li>
