--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -312,7 +312,8 @@ var {
 #numpairsout,
 #subparticout,
 #atomout,
-#ionout {
+#ionout,
+#proteinout {
     font-size: 20px !important;
     line-height: 24px !important;
     padding-left: 3em !important;
