--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -370,6 +370,19 @@
                 <li class="border-top my-3"></li>
                 <li class="py-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
+                        data-bs-target="#mathflareservices-collapse" aria-expanded="false">
+                        MathFlare Services
+                    </button>
+                    <div class="collapse" id="mathflareservices-collapse">
+                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small my-1">
+                            <li><a href="https://linear-b.mathflare.xyz/" target="_blank" rel="noopener"
+                                    class="link-light rounded text-truncate"><i class="bi bi-globe"></i>
+                                    MathFlare Linear B Translator</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="py-1">
+                    <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#support-collapse" aria-expanded="false">
                         🍕 Support MathFlare
                     </button>
