prod: added rna/dna content and biology refact

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -313,7 +313,8 @@ var {
 #subparticout,
 #atomout,
 #ionout,
-#proteinout {
+#proteinout,
+#drnaout {
     font-size: 20px !important;
     line-height: 24px !important;
     padding-left: 3em !important;
