fix: minor changes

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -208,7 +208,7 @@
                                     RNA Complement Generator</a></li>
                             <li><a href="dnarnacontent.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-percent"></i>
-                                    DNA/RNA Content</a></li>
+                                    DNA&#8725;RNA Content</a></li>
                             <li><a href="proteintranslation.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-hexagon"></i>
                                     Protein Translation</a></li>
