prod: updated copyright notices

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -415,7 +415,9 @@
                     <p class="text-break" id="search-result"></p>
                 </li>
                 <li>
-                    <p class="text-muted" style="padding: 0.5em;">&copy;2021 MathFlare.xyz - All rights reserved.</p>
+                    <p class="text-muted" style="padding: 0.5em;">&copy;2021 MathFlare.xyz - a <a
+                            href="https://beaverops.dkatsios.ml" target="_blank" rel="noopener"
+                            class="hover-link">Beaverops&#8482;</a> company</p>
                 </li>
             </ul>
         </nav>
