refactor: biology refactor

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -195,7 +195,7 @@
                     <div class="collapse" id="biology-collapse">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small my-1">
                             <li>
-                                <p class="nav-header rounded user-select-none">Genetics</p>
+                                <p class="nav-header rounded user-select-none">Μolecular Βiology - Genetics</p>
                             </li>
                             <li><a href="punnettsquare.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-gender-ambiguous"></i>
@@ -203,15 +203,15 @@
                             <li><a href="complementarydna.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-link-45deg"></i>
                                     DNA Complement Generator</a></li>
-                            <li><a href="complementaryrna.html" class="link-light rounded text-truncate"><i
+                            <li><a href="dnatranscription.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-link-45deg"></i>
-                                    RNA Complement Generator</a></li>
+                                    DNA Transcription</a></li>
                             <li><a href="dnarnacontent.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-percent"></i>
                                     DNA&#8725;RNA Content</a></li>
                             <li><a href="proteintranslation.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-hexagon"></i>
-                                    Protein Translation</a></li>
+                                    Translation</a></li>
                         </ul>
                     </div>
                 </li>
