--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -1,17 +1,19 @@
+<img src="Assets/spiderweb.png" alt="spider web" class="position-fixed"
+    style="top: 0; right: 0; height: 6.5em; z-index: 99999999;">
 <nav class="navbar fixed-top navbar-dark bg-dark" style="border-bottom: 1px solid var(--bs-warning)">
     <div class="container-fluid">
-        <button class="btn btn-outline-light" data-bs-toggle="offcanvas" data-bs-target="#menuSidebar"
+        <button class="btn btn-outline-light font-spooky" data-bs-toggle="offcanvas" data-bs-target="#menuSidebar"
             aria-controls="menuSidebar"><i class="bi bi-list"></i> Menu</button>
         <a class="navbar-brand" href="https://www.mathflare.xyz">
             <img src="Assets/icon.png" class="user-select-none mb-1" style="height: 1em;" alt="logo">
-            MathFlare.xyz
+            <span class="font-spooky">MathFlare.xyz</span>
         </a>
     </div>
 </nav>
 <div class="offcanvas offcanvas-start" tabindex="-1" id="menuSidebar" aria-labelledby="menuLabel">
     <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="menuLabel"><img src="Assets/icon.png" class="user-select-none mb-1"
-                style="height: 1em;" alt="logo"> Menu</h5>
+                style="height: 1em;" alt="logo"> <span class="font-spooky">Spooky Menu</span></h5>
         <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas"
             aria-label="Close"></button>
     </div>
@@ -422,6 +424,7 @@
             </ul>
         </nav>
     </div>
+    <img src="Assets/spider.png" alt="spider" class="position-absolute" style="bottom: 0.2em; left: 0.2em; height: 6em">
 </div>
 <script>
     searcCalc();
