prod: minor changes

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -198,19 +198,19 @@
                             </li>
                             <li><a href="punnettsquare.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-gender-ambiguous"></i>
-                                    Punnett Square</a></li>
+                                    Punnett Square Generator</a></li>
                             <li><a href="complementarydna.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-link-45deg"></i>
                                     DNA Complement Generator</a></li>
                             <li><a href="dnatranscription.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-link-45deg"></i>
-                                    DNA Transcription</a></li>
+                                    DNA Transcription Generator</a></li>
                             <li><a href="dnarnacontent.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-percent"></i>
-                                    DNA&#8725;RNA Content</a></li>
+                                    DNA/RNA Content</a></li>
                             <li><a href="proteintranslation.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-hexagon"></i>
-                                    Translation</a></li>
+                                    DNA/RNA to Portein Translator</a></li>
                         </ul>
                     </div>
                 </li>
