prod: minor changes

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -207,7 +207,7 @@
                                     DNA Transcription Generator</a></li>
                             <li><a href="dnarnacontent.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-percent"></i>
-                                    DNA/RNA Content</a></li>
+                                    DNA/RNA Content Calculator</a></li>
                             <li><a href="proteintranslation.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-hexagon"></i>
                                     DNA/RNA to Portein Translator</a></li>
