--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -210,7 +210,7 @@
                                     DNA/RNA Content Calculator</a></li>
                             <li><a href="proteintranslation.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-hexagon"></i>
-                                    DNA/RNA to Portein Translator</a></li>
+                                    DNA/RNA to Protein Translator</a></li>
                         </ul>
                     </div>
                 </li>
