--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -211,6 +211,9 @@
                             <li><a href="proteintranslation.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-hexagon"></i>
                                     DNA/RNA to Protein Translator</a></li>
+                            <li><a href="proteincontent.html" class="link-light rounded text-truncate"><i
+                                        class="bi bi-percent"></i>
+                                    Protein Content Calculator</a></li>
                         </ul>
                     </div>
                 </li>
