--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -336,7 +336,8 @@ var {
 #ionout,
 #proteinout,
 #drnaout,
-#proteincontout {
+#proteincontout,
+#proteintodnarnout {
     font-size: 20px !important;
     line-height: 24px !important;
     padding-left: 3em !important;
