refact: biorefactor and added rna cmplement

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -202,12 +202,15 @@
                             <li><a href="complementarydna.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-link-45deg"></i>
                                     DNA Complement Generator</a></li>
-                            <li><a href="dnatranscription.html" class="link-light rounded text-truncate"><i
+                            <li><a href="complementaryrna.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-link-45deg"></i>
-                                    DNA Transcription Generator</a></li>
+                                    RNA Complement Generator</a></li>
                             <li><a href="dnarnacontent.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-percent"></i>
                                     DNA/RNA Content Calculator</a></li>
+                            <li><a href="dnatranscription.html" class="link-light rounded text-truncate"><i
+                                        class="bi bi-link-45deg"></i>
+                                    DNA Transcription Generator</a></li>
                             <li><a href="proteintranslation.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-hexagon"></i>
                                     DNA/RNA to Protein Translator</a></li>
