fix: fixed biology in navbar

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -189,37 +189,49 @@
                 <li class="py-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#biology-collapse" aria-expanded="false">
-                        Biology
+                        Μolecular Βiology
                     </button>
                     <div class="collapse" id="biology-collapse">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small my-1">
                             <li>
-                                <p class="nav-header rounded user-select-none">Μolecular Βiology - Genetics</p>
+                                <p class="nav-header rounded user-select-none">Ηeredity</p>
                             </li>
                             <li><a href="punnettsquare.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-gender-ambiguous"></i>
                                     Punnett Square Generator</a></li>
+                            <li>
+                                <p class="nav-header rounded user-select-none">Complementarity</p>
+                            </li>
                             <li><a href="complementarydna.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-link-45deg"></i>
                                     DNA Complement Generator</a></li>
                             <li><a href="complementaryrna.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-link-45deg"></i>
                                     RNA Complement Generator</a></li>
+                            <li>
+                                <p class="nav-header rounded user-select-none">Content Percent</p>
+                            </li>
                             <li><a href="dnarnacontent.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-percent"></i>
                                     DNA/RNA Content Calculator</a></li>
+                            <li><a href="proteincontent.html" class="link-light rounded text-truncate"><i
+                                        class="bi bi-percent"></i>
+                                    Protein Content Calculator</a></li>
+                            <li>
+                                <p class="nav-header rounded user-select-none">Transcription</p>
+                            </li>
                             <li><a href="dnatranscription.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-link-45deg"></i>
                                     DNA Transcription Generator</a></li>
+                            <li>
+                                <p class="nav-header rounded user-select-none">Translation</p>
+                            </li>
                             <li><a href="proteintranslation.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-hexagon"></i>
                                     DNA/RNA to Protein Translator</a></li>
                             <li><a href="proteintodnarna.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-hexagon"></i>
                                     Protein to DNA/RNA Translator</a></li>
-                            <li><a href="proteincontent.html" class="link-light rounded text-truncate"><i
-                                        class="bi bi-percent"></i>
-                                    Protein Content Calculator</a></li>
                         </ul>
                     </div>
                 </li>
