--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -223,6 +223,9 @@
                             <li><a href="dnatranscription.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-link-45deg"></i>
                                     DNA Transcription Generator</a></li>
+                            <li><a href="rnatodna.html" class="link-light rounded text-truncate"><i
+                                        class="bi bi-link-45deg"></i>
+                                    RNA to DNA Generator</a></li>
                             <li>
                                 <p class="nav-header rounded user-select-none">Translation</p>
                             </li>
